--- a/views/Charities.hbs
+++ b/views/Charities.hbs
@@ -56,15 +56,15 @@
                         </li>
                         {{!-- <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/donate">Donate</a>
-                        </li> --}}
+                        </li> 
                         <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/contact-us">Contact</a>
-                        </li>
+                        </li>--}}
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
-                    <a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-dark'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-dark'></i></a>
+                    {{!--<a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-dark'></i></a>
+                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-dark'></i></a>--}}
                     <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"><i class='bx bx-user-circle bx-sm text-dark'></i></a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/login-page" id="login">Login</a></li>
