--- a/views/Donors/Donor_profile.hbs
+++ b/views/Donors/Donor_profile.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../../assets/css/profile.css">
     
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/boxicon.min.css" rel="stylesheet">
@@ -41,11 +42,9 @@
   <div class="container py-5">
     <div class="row">
       <div class="col">
-            {{!-- <a class="text-right">I am on the right</a> --}}
         <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
           <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            {{!-- <li class="breadcrumb-item"><a href="#">User</a></li> --}}
             <li class="breadcrumb-item active" aria-current="page">User Profile</li>
           </ol>
         </nav>
@@ -114,50 +113,10 @@
               <div class="card-body" id="cards">
                 <p class="mb-4">Your recent <span class="txt">Donations</span> 
                 </p>
-                {{!-- <p class="mb-1" style="font-size: .77rem;">children's home</p>
-                <p class="mb-1"> TOYS</p>
-                <p class="txt">500KSH <span class="text-warning"> RECEIVED</span></p>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Orphanage</p>
-                <p class="txt">100KSH <span class="text-danger">NOT RECEIVED</span></p>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Church</p>
-                <p class="txt">2000KSH</p> --}}
               </div>
             </div>
           </div>
 
-          {{!-- <div class="col-md-6">
-            <div class="card mb-4 mb-md-0">
-              <div class="card-body">
-                <p class="mb-4"><span class="text-primary font-italic me-1">assigment</span> Project Status
-                </p>
-                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                <div class="progress rounded" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                <div class="progress rounded mb-2" style="height: 5px;">
-                  <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div> --}}
         </div>
       </div>
     </div>
