--- a/views/donations/organizations.hbs
+++ b/views/donations/organizations.hbs
@@ -33,7 +33,7 @@
     <!-- Header -->
     <nav id="main_nav" class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container d-flex justify-content-between align-items-center">
-            <a class="navbar-brand h1" href="index.html">
+            <a class="navbar-brand h1" href="/">
                 <i class='bx bx-buildings bx-sm text-dark'></i>
                 <span class="text-dark h4">Online</span> <span class="text-warning h4">Charity</span>
             </a>
