--- a/views/Organization/Organization_home.hbs
+++ b/views/Organization/Organization_home.hbs
@@ -18,8 +18,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../../assets/css/dashboard.css">
 
-  <link rel="stylesheet" href="../assets/organization_home.css">
 
 
 
