--- a/views/donations/donate_form.hbs
+++ b/views/donations/donate_form.hbs
@@ -398,15 +398,15 @@ td {
                         </li>
                         {{!-- <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/donate">Donate</a>
-                        </li> --}}
+                        </li> 
                         <li class="nav-item">
                             <a class="nav-link btn-outline-warning rounded-pill px-3" href="/contact-us">Contact</a>
-                        </li>
+                        </li> --}}
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
-                    <a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-dark'></i></a>
-                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-dark'></i></a>
+                    {{!--<a class="nav-link" href="#"><i class='bx bx-bell bx-sm bx-tada-hover text-dark'></i></a>
+                    <a class="nav-link" href="#"><i class='bx bx-cog bx-sm text-dark'></i></a> --}}
                     <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"><i
                             class='bx bx-user-circle bx-sm text-dark'></i></a>
                     <ul class="dropdown-menu">
@@ -553,9 +553,9 @@ td {
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/Organization">Organizations</a>
                             </li>
-                            <li class="pb-2">
+                           {{!-- <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/contact-us">Contact</a>
-                            </li>
+                            </li> --}}
                         </ul>
                 </div>
 
