--- a/views/donations/donate_form.hbs
+++ b/views/donations/donate_form.hbs
@@ -545,7 +545,7 @@ td {
                         <ul class="list-unstyled text-light light-300">
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a
-                                    class="text-decoration-none text-light" href="index.html">Home</a>
+                                    class="text-decoration-none text-light" href="/">Home</a>
                             </li>
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/charity">Charity</a>
@@ -613,6 +613,7 @@ td {
     <script src="../../assets/js/bootstrap.bundle.min.js"></script>
 
     <script src="../assets/js/donations/donate_form.js"></script>
+    <script src="../assets/js/home.js"></script>
 
 </body>
 
