--- a/views/donations/organizations.hbs
+++ b/views/donations/organizations.hbs
@@ -105,13 +105,12 @@
     
 
     <!-- Start Footer -->
-    <footer class="bg-success pt-4">
+    {{!-- <footer class="bg-success pt-4">
         <div class="container">
             <div class="row py-4">
 
                 <div class="col-lg-3 col-12 align-left">
                     <a class="navbar-brand" href="index.html">
-                        <!--<i class='bx bx-buildings bx-sm text-light'></i> -->
                     </a>
                     <p class="text-light my-lg-4 my-2">
                        Be the change you want to see in the world - <br>
@@ -159,10 +158,6 @@
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/Organization">Organizations</a>
                             </li>
-                            {{!--<li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/contact-us">Contact</a>
-                            </li>--}}
-                        </ul>
                 </div>
 
 
@@ -180,7 +175,7 @@
 
             </div>
         </div>
-    </footer>
+    </footer> --}}
     <!-- End Footer -->
 
 
@@ -188,6 +183,7 @@
     <script src="../../assets/js/bootstrap.bundle.min.js"></script>
     
     <script src="assets/js/donations/view_donations.js"></script>
+<script src="assets/js/home.js"></script>
 
 </body>
 
