--- a/views/home.hbs
+++ b/views/home.hbs
@@ -34,7 +34,7 @@
     <!-- Header -->
     <nav id="main_nav" class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container d-flex justify-content-between align-items-center">
-            <a class="navbar-brand h1" href="index.html">
+            <a class="navbar-brand h1" href="/">
                 <i class='bx bx-buildings bx-sm text-dark'></i>
                 <span class="text-dark h4">Online</span> <span class="text-warning h4">Charity</span>
             </a>
@@ -183,7 +183,6 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-       <img src="pic2.jpg" alt="Los Angeles"class="d-block" style="width:100%">
       <div class="carousel-text">
         <h1>Brighter Futures Foundation</h1>
         <p>Helps to provide critical resources and support to children in need, including education, healthcare, and food assistance. <br>
@@ -193,7 +192,6 @@
       </div>
     </div>
     <div class="carousel-item">
-      {{!-- <img src="chicago.jpg" alt="Chicago" class="d-block" style="width:100%"> --}}
       <div class="carousel-text">
         <h1>Rise Above Charity</h1>
         <p>provide immediate assistance to communities affected by natural disasters, such as hurricanes, earthquakes, and wildfires. <br>
@@ -201,7 +199,6 @@
       </div>
     </div>
     <div class="carousel-item">
-      {{!-- <img src="./assets/images/Car crash.jpg" alt="New York" class="d-block" style="width:100%"> --}}
       <div class="carousel-text">
         <h1>Light the Way Charity</h1>
         <p>Work to promote and protect the rights of individuals and communities around the world, including advocating for gender equality, <br>
@@ -274,7 +271,7 @@
                     <h3 class="h4 pb-lg-3 text-light light-300">Our Company</h2>
                         <ul class="list-unstyled text-light light-300">
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="index.html">Home</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="/">Home</a>
                             </li>
                             <li class="pb-2">
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/charity">Charity</a>
