--- a/views/donations/donate_form.hbs
+++ b/views/donations/donate_form.hbs
@@ -422,7 +422,7 @@ td {
 
     <div id="popup-1" class="container ml-auto mr-auto">
             <div id="header">
-                <header>Create Donation</header>
+                <header>Donation form</header>
                 <p>
                 This donation was created by <span id="name"></span>
                 </p>
