--- a/views/Organization/reports.hbs
+++ b/views/Organization/reports.hbs
@@ -265,6 +265,7 @@
         <div class="col-lg-8 ml-auto mr-auto">
       <center><canvas id="cht" style="max-width: 700px;width: 100%;"></canvas></center>
 
+        <button onclick="printImg()" class="btn btn-success">PRINT</button>
         </div>
       </div>
     </div>
