--- a/views/admin/reports.hbs
+++ b/views/admin/reports.hbs
@@ -91,6 +91,8 @@
       <center><canvas id="cht" style="max-width: 700px;width: 100%;"></canvas></center>
       <center><canvas id="cht1" style="max-width: 700px;width: 100%;"></canvas></center>
       <center><canvas id="cht2" style="max-width: 700px;width: 100%;"></canvas></center>
+        <button onclick="window.print()" class="btn btn-success">PRINT</button>
+
 
                 {{!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Dashboard</h1>
